syntax = "proto3";

package todo_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "pkg/todo_v1;todo_v1";

service TodoV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message TodoNoteInfo {
  string title = 1;
  string content = 2;
}

message TodoNote {
  int64 id = 1;
  TodoNoteInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UpdateTodoNoteInfo {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue content = 2;
}

message CreateRequest {
  TodoNoteInfo info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  TodoNote note = 1;
}

message ListRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message ListResponse {
  repeated TodoNote notes = 1;
}

message UpdateRequest {
  int64 id = 1;
  UpdateTodoNoteInfo info = 2;
}

message DeleteRequest {
  int64 id = 1;
}



